--- a/views/base/html.pug
+++ b/views/base/html.pug
@@ -1,8 +1,9 @@
 doctype html
 html
     head
-        title=title
-        link(href='/stylesheets/whole/reset.css',rel='stylesheet')
+        title Moondust
+        link(href='/style/whole/reset.css',rel='stylesheet')
+        link(href='/favicon.svg',rel='shortcut icon',sizes='any')
         block head
     body
         block body
