--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,7 @@
 extends base/html
 block head
-    link(href='/stylesheets/index.css',rel='stylesheet')
-
+    link(href='/style/index.css',rel='stylesheet')
 block body
-    include chat/chat
+
 
 
