--- a/views/base/html.pug
+++ b/views/base/html.pug
@@ -2,8 +2,11 @@ doctype html
 html
     head
         title Moondust
+        meta( charset="UTF-8")
+        meta( name="viewport" content="width=device-width, initial-scale=1")
         link(href='/style/whole/reset.css',rel='stylesheet')
         link(href='/favicon.svg',rel='shortcut icon',sizes='any')
+
         block head
     body
         block body
